# TransFolk

./: .gitignore  README.md  pyproject.toml  run.py
apps/: run_charts.py  run_classifier_paper.py  run_generate.py  run_generate2.py  run_metrics.py  run_midi_to_xml.py  run_preprocess.py  run_sty_curves.py  run_tokenize.py  run_train.py  run_train2.py
apps/db/: config_registry.py  sql_createtable.txt  transfolk_config.db  transfolk_config.db-journal
apps/db_admin/: main.py
apps_teimus/: report_table_latex.py  run_chart_features.py  run_classifier.py  run_corpus_split.py  run_limpieza_profano_religioso.py  run_reparto_aleatorio.py  run_reparto_aleatorio2.py
data_tokenized/teimus/: ts_mode_distribution.json  ts_mode_distribution_normalized.json
data_tokenized/todos/: ts_mode_distribution.json  (+1 more)
testAPI/: main.py
transfolk/: main.py  main2.py  pipeline.py
transfolk-web/: __app.js  app.js  index.html  style.css
transfolk/api/: app.py
transfolk_charts/: membership.py  pca.py  training_curves.py
transfolk_classifier/: README_feature_distributions_ks_bonferroni.txt  ablation_study.py  build_corpus_split.py  classifier.py  classifier_curves.py  corpus_membership_classifier.py  evaluate_models.py  feature_distributions.py  feature_importance.py  final_results.py  interpretability.py  mlp_classifier.py  sequential_classifier.py
transfolk_config/: paths.py  resolver.py  settings.py
transfolk_features/: extract_features.py
transfolk_metrics/: patternRetentionRate.py  patternRetentionRateMelodic.py
transfolk_preprocesing/: check_corpus.py  download_essen.py
(+288 files in other folders)
