[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transfolk"
version = "0.2.0"
description = "TransFolk: symbolic folk melody generation with Transformers"
requires-python = ">=3.11.8"
dependencies = [
  "torch==2.2.2",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "music21==8.3.0",
  "matplotlib==3.8.3",
  "tqdm==4.66.2",
  "joblib==1.3.2",
  "pyyaml==6.0.1",


  "pandas==3.0.1",
  "scikit-learn==1.4.2"
]
[tool.setuptools]
packages = ["transfolk", "transfolk_config", "transfolk_tokenization"]



